# browser-agent

./: .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  justfile  local.py  main.py  mise.toml  pyproject.toml
.cursor/rules/: browser-agent-api.mdc  dev-commands.mdc  env-config.mdc  project-structure.mdc  python-style.mdc
.githooks/: pre-commit
.github/workflows/: build.yml
lib/: ai.py  asyncio.py  browser.py  gateway.py  models.py  patch.py  storage.py
src/: app.py
src/lib/: gateway.py
src/lib/browser/: models.py  session.py
