[project]
name = "python-bu"
version = "0.1.0"
description = "Kernel sample app for Browser Use"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.10.0",
    "browser-use>=0.7.2",
    "kernel>=0.11.0",
    "pydantic>=2.10.6",
    "sorcery>=0.2.2",
    "zenbase-llml>=0.4.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.116.1",
    "ipdb>=0.13.13",
    "ipython>=9.5.0",
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]
